--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+body {
+  padding-top: 50px;
+  z-index: 0;
+}
+
+nav {
+  background-color: #512da8;
+}
+
 .row-header {
   margin: 0px auto;
   padding: 0px auto;
