--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,19 @@ address {
   border-bottom: 1px solid var(--bdr-clr);
   padding: 10px;
 }
+
+.carousel {
+  background-color: #512da8;
+}
+
+.carousel-item {
+  height: 300px;
+}
+
+.carousel-item img {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
+}
