--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -1,55 +1,70 @@
+body {
+  padding-top: 50px;
+  z-index: 0;
+}
+
+nav {
+  background-color: #512da8;
+}
+
 .row-header {
   margin: 0px auto;
-  padding: 0px 0px;
+  padding: 0px auto;
 }
+
 .row-content {
   margin: 0px auto;
   padding: 50px 0px;
   border-bottom: 1px ridge;
-  min-height: 40px;
+  min-height: 400px;
 }
+
 .footer {
   background-color: #d1c4e9;
   margin: 0px auto;
   padding: 20px 0px;
 }
+
 .jumbotron {
   margin: 0px auto;
   padding: 70px 30px;
   background-color: #9575cd;
   color: floralwhite;
 }
+
 address {
   font-size: 80%;
-  margin: 0px;
   color: #0f0f0f;
+  margin: 0px;
 }
-body {
-  padding-top: 50px;
-  z-index: 0;
-}
-.navbar-dark {
-  background-color: #512da8;
-}
+
 .tab-content {
-  border: 1px solid #ddd;
-  border-top: 0px;
+  --bdr-clr: #ddd;
+  border-left: 1px solid var(--bdr-clr);
+  border-right: 1px solid var(--bdr-clr);
+  border-bottom: 1px solid var(--bdr-clr);
   padding: 10px;
 }
+
 .carousel {
   background-color: #512da8;
 }
-.carousel .carousel-item {
+
+.carousel-item {
   height: 300px;
 }
-.carousel .carousel-item img {
+
+.carousel-item img {
+  display: inline-block;
   position: absolute;
   top: 0;
-  left: 0px;
+  left: 0;
   min-height: 300px;
 }
+
 #carouselButton {
   right: 0;
   position: absolute;
   bottom: 0;
+  z-index: 1;
 }
