--- a/css/styles.css
+++ b/css/styles.css
@@ -1,83 +1,65 @@
 .row-header {
   margin: 0px auto;
-  padding: 0px 0px;
-}
+  padding: 0px 0px; }
 
 .row-content {
   margin: 0px auto;
   padding: 50px 0px;
   border-bottom: 1px ridge;
-  min-height: 40px;
-}
+  min-height: 40px; }
 
 .footer {
   background-color: #d1c4e9;
   margin: 0px auto;
-  padding: 20px 0px;
-}
+  padding: 20px 0px; }
 
 .jumbotron {
   margin: 0px auto;
   padding: 70px 30px;
   background-color: #9575cd;
-  color: floralwhite;
-}
+  color: floralwhite; }
 
 address {
   font-size: 80%;
   margin: 0px;
-  color: #0f0f0f;
-}
+  color: #0f0f0f; }
 
 body {
   padding-top: 50px;
-  z-index: 0;
-}
+  z-index: 0; }
 
 .navbar-dark {
-  background-color: #512da8;
-}
+  background-color: #512da8; }
 
 .tab-content {
   border: 1px solid #ddd;
   border-top: 0px;
-  padding: 10px;
-}
+  padding: 10px; }
 
 .carousel {
-  background-color: #512da8;
-}
-.carousel .carousel-item {
-  height: 300px;
-}
-.carousel .carousel-item img {
-  position: absolute;
-  top: 0;
-  left: 0px;
-  min-height: 300px;
-}
+  background-color: #512da8; }
+  .carousel .carousel-item {
+    height: 300px; }
+    .carousel .carousel-item img {
+      position: absolute;
+      top: 0;
+      left: 0px;
+      min-height: 300px; }
 
 #carouselButton {
   right: 0;
   position: absolute;
   bottom: 0;
-}
+  z-index: 1; }
 
 .modal-header {
-  background-color: #512da8;
-}
-.modal-header h3 {
-  color: white;
-}
-.modal-header button {
-  color: floralwhite;
-}
-.modal-header button:hover {
-  color: white;
-}
+  background-color: #512da8; }
+  .modal-header h3 {
+    color: white; }
+  .modal-header button {
+    color: floralwhite; }
+  .modal-header button:hover {
+    color: white; }
 
 .modal-body {
-  background-color: #d1c4e9;
-}
-
-/*# sourceMappingURL=styles.css.map */
+  background-color: #d1c4e9; }
